--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "queue-async": "^1.0.7",
     "request": "^2.53.0",
     "tape": "^3.5.0",
+    "through2": "^0.6.3",
     "url-body-stream": "^1.1.0"
   }
 }
