--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "github": "^0.2.3",
     "jsonfile": "^2.0.0",
     "lodash": "^3.2.0",
+    "probable": "^1.3.0",
     "queue-async": "^1.0.7",
     "request": "^2.53.0",
+    "seedrandom": "^2.3.11",
     "tape": "^3.5.0",
     "through2": "^0.6.3",
     "tweet-truncate": "^1.1.0",
-    "url-body-stream": "^1.1.0"
+    "url-body-stream": "^1.2.0"
   }
 }
