--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "tape": "^3.0.3"
   },
   "dependencies": {
+    "basicset-chronicler": "^1.3.0",
     "conform-async": "^1.1.1",
     "github": "^0.2.3",
     "jsonfile": "^2.0.0",
     "lodash": "^3.2.0",
+    "multilevel": "^6.0.1",
+    "pm2": "^0.12.6",
     "probable": "^1.3.0",
     "queue-async": "^1.0.7",
     "request": "^2.53.0",
