--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "basicset-chronicler": "^1.3.0",
+    "change-case": "^2.2.0",
     "conform-async": "^1.1.1",
     "github": "^0.2.3",
     "jsonfile": "^2.0.0",
@@ -41,6 +42,7 @@
     "through2": "^0.6.3",
     "tweet-truncate": "^1.1.0",
     "twit": "^1.1.20",
-    "url-body-stream": "^1.2.0"
+    "url-body-stream": "^1.2.0",
+    "wordnok": "^1.0.0"
   }
 }
